# public/openapi.json
@@ -537,7 +537,15 @@
                             "actionType": {
                               "type": "string",
                               "enum": [
-                                "DISMISS"
+                                "DISMISS",
+                                "OPEN_APP_IN_APP_STORE"
+                              ]
+                            },
+                            "buttonDesign": {
+                              "type": "string",
+                              "enum": [
+                                "FILLED",
+                                "TEXT"
                               ]
                             },
                             "title": {
@@ -740,11 +748,19 @@
                             "actionType": {
                               "type": "string",
                               "enum": [
-                                "DISMISS"
+                                "DISMISS",
+                                "OPEN_APP_IN_APP_STORE"
                               ]
                             },
                             "title": {
                               "type": "string"
+                            },
+                            "buttonDesign": {
+                              "type": "string",
+                              "enum": [
+                                "FILLED",
+                                "TEXT"
+                              ]
                             }
                           }
                         }
